5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1758_1580.log
== TEST (2019-05-29 13:18:42) 
-- CODE:
vn = array(eval(int(input(("Digite o vetor das notas: "))))
na = array(eval(int(input("Digite o vetor com os nomes dos alunos: "))))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and v[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- ERROR:
File "XXXX", line 2
    na = array(eval(int(input())))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:19:19) 
-- CODE:
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and v[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- EXECUTION TIME:
0.207316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 1, in <module>
    vn = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:21) 
-- CODE:
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and v[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vn = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:03) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and v[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:57) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:22:09) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(na[n])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:46) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
n = 0
while(na[n] != max(vn)):
	n = n + 1  
print(j)
print(k)
print(l)
print(round(m, 2))
print(na[n])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:24:58) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
n = 0
while(vn[n] != max(vn)):
	n = n + 1  
print(j)
print(k)
print(l)
print(round(m, 2))
print(na[n])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:25:42) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
n = 0
while(vn[n] != max(vn)):
	n = n + 1  
print(j)
print(k)
print(l)
print(round(m, 2))
print(na[n])

-- EXECUTION TIME:
1.00755
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:26:35) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
 
n = 0
while(n != max(vn)):
	n = n + 1
			  
print(j)
print(k)
print(l)
print(m)
print(n)

-- EXECUTION TIME:
0.464697
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
9
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:41:39) 
-- CODE:
from numpy import *
vn = array(eval(input("Digite o vetor das notas: ")))
na = array(eval(input("Digite o vetor com os nomes dos alunos: ")))
i = 0
j = 0
k = 0
l = 0
while(i < size(vn)):
	if(vn[i] < 0):
		j = j + 1
	elif(vn[i] >= 6):
		k = k + 1
	elif(vn[i] >= 0 and vn[i] < 6):
		l = l + 1
	i = i + 1
m = (sum(vn) + j) / (size(vn) - j)
n = 0
while(vn[n] != max(vn)):
	n = n + 1  
print(j)
print(k)
print(l)
print(round(m, 2))
print(na[n])

-- EXECUTION TIME:
0.360602
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
